After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740952 - alsa: NetBSD fixes
alsa: NetBSD fixes
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
1.4.4
Other NetBSD
: Normal normal
: 1.4.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-12-01 08:12 UTC by Thomas Klausner
Modified: 2014-12-12 16:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch addressing the issue. (867 bytes, patch)
2014-12-01 08:12 UTC, Thomas Klausner
committed Details | Review

Description Thomas Klausner 2014-12-01 08:12:18 UTC
Created attachment 291865 [details] [review]
Patch addressing the issue.

NetBSD has a port of alsa, but its system headers don't define ESTRPIPE.
The attached patches use EPIPE instead.
Comment 1 Sebastian Dröge (slomo) 2014-12-01 08:51:40 UTC
commit a4b94e6c69525e404354cbd3d0b67ae7e001f385
Author: Thomas Klausner <wiz@danbala.tuwien.ac.at>
Date:   Mon Dec 1 09:50:24 2014 +0100

    alsa: Use EPIPE instead of ESTRPIPE if the latter does not exist
    
    NetBSD does not have ESTRPIPE.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=740952
Comment 2 Tim-Philipp Müller 2014-12-12 16:03:59 UTC
Cherry-picked into 1.4 branch.