alsa: Use EPIPE instead of ESTRPIPE if the latter does not exist

NetBSD does not have ESTRPIPE.

https://bugzilla.gnome.org/show_bug.cgi?id=740952